--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -2,14 +2,14 @@
     "version": 2,
     "builds": [
         {
-            "src": "api/index.js",
+            "src": "src/app.js",
             "use": "@vercel/node"
         }
     ],
     "routes": [
         {
-            "src": "/api/(.*)",
-            "dest": "api/index.js"
+            "src": "/(.*)",
+            "dest": "src/app.js"
         }
     ]
 }
