--- a/backend/.env.example
+++ b/backend/.env.example
@@ -2,4 +2,5 @@ PORT=5000
 SUPABASE_URL=your_supabase_url
 SUPABASE_SERVICE_KEY=your_supabase_service_role_key
 JWT_SECRET=your_jwt_secret
+REFRESH_SECRET=your_refresh_secret
 CLIENT_URL=your_frontend_production_url
